# AUTOCONF_R

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure copy.ac  configure.ac  configure~
R/: RcppExports.R
man/: autoconf-package.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  reduce.cpp
